# github-copilot-boilerplates

./: CONTRIBUTING.md  LICENSE  OVERVIEW.md  README.md
.github/: copilot-instructions.md
.github/instructions/: boilerplate.instructions.md  markdown.instructions.md  specification-keywords.instructions.md  template-structure.instructions.md
.github/prompts/: initialize-boilerplate-basic.prompt.md
mcp-boilerplate/: .gitignore  README.md
mcp-boilerplate/.github/: copilot-instructions.md
mcp-boilerplate/.github/instructions/: architecture.instructions.md  coding-standards.instructions.md  coding-standarts.instructions.md  mcp.instructions.md  performance.instructions.md  project.instructions.md  security-new.instructions.md  security-old.instructions.md  security.instructions.md  semantic-search.instructions.md  testing.instructions.md
mcp-boilerplate/.github/prompts/: semantic-search-integration.prompt.md
mcp-boilerplate/docs/mcp/: PROTOCOL_ARCHITECTURE.md  PROTOCOL_BASE_PROTOCOL.md  PROTOCOL_CLIENT_FEATURES.md  PROTOCOL_SERVER_FEATURES.md  PROTOCOL_SPECIFICATION.md
openapi-yaml-generator-boilerplate/: .gitignore  README.md
openapi-yaml-generator-boilerplate/.github/: copilot-instructions.md
openapi-yaml-generator-boilerplate/.github/instructions/: api-design.instructions.md  architecture.instructions.md  coding-standards.instructions.md  gitignore.instructions.md  security.instructions.md  testing.instructions.md  yaml-formatting.instructions.md
openapi-yaml-generator-boilerplate/.github/prompts/: openapi-generator.prompt.md  project-initialization.prompt.md
openapi-yaml-generator-boilerplate/docs/examples/: ecommerce-api.md  microservices-api.md  simple-blog-api.md
openapi-yaml-generator-boilerplate/docs/openapi/: best-practices.md
python-fastapi-boilerplate/: .env.example  .gitignore  README.md  pyproject.toml
python-fastapi-boilerplate/.github/: copilot-instructions.md
python-fastapi-boilerplate/.github/instructions/: api-design.instructions.md  architecture.instructions.md  coding-standards.instructions.md  database.instructions.md  docker.instructions.md  gitignore.instructions.md  performance.instructions.md  security.instructions.md  testing.instructions.md
python-fastapi-boilerplate/.github/prompts/: api-design.prompt.md  feature-development.prompt.md  project-initialization.prompt.md  troubleshooting.prompt.md
python-fastapi-boilerplate/docs/python/: best-practices.md  configuration.md  setup.md
react-native-boilerplate/: COMPLETION_SUMMARY.md
react-native-boilerplate/.github/: copilot-instructions.md
react-native-boilerplate/.github/instructions/: architecture.instructions.md  camera.instructions.md  coding-standards.instructions.md  configuration.instructions.md  deployment.instructions.md  gitignore.instructions.md  graphics.instructions.md  navigation.instructions.md  performance.instructions.md  platform-specific.instructions.md  security.instructions.md  state-management.instructions.md  testing.instructions.md  ui-ux.instructions.md
spring-boilerplate/: .gitignore  pom.xml
spring-boilerplate/.devcontainer/: devcontainer.json  docker-compose.yml
spring-boilerplate/.devcontainer/scripts/: on-create.sh  post-create.sh  post-start.sh
spring-boilerplate/.github/prompts/: feature-development.prompt.md  semantic-search-integration.prompt.md  troubleshooting.prompt.md
